# gale-shapley-rs

./: Cargo.toml  README.md  generate_input.py  success_blocks_3.R
.github/workflows/: release.yml  rust.yml
src/: lib.rs  main.rs
